# velo-backend

./: .env  .gitignore  Cargo.toml  README.md  gamedata.txt  playerdata.txt
migrations/20170525082605_generate_players/: up.sql
migrations/20170525084713_generate_games/: up.sql
migrations/20170528180743_add_foreign_key/: down.sql  up.sql
migrations/20170531165837_change_elo_type/: up.sql
migrations/20170531170057_add_calculate_elo_trigger/: down.sql  up.sql
migrations/20170601102050_change_elo_type_back/: up.sql
migrations/20170606034056_change_trigger_to_insert_only/: down.sql  up.sql
src/: error.rs  game.rs  id.rs  main.rs  player.rs
src/db/: mod.rs
src/game/: mod.rs
src/game_conversion/: mod.rs
src/handlers/: game.rs  mod.rs  player.rs
src/player/: id.rs  mod.rs
static/: games.json  index.html  main.js  players.json
