[package]
authors = ["Antti Keränen <detegr@gmail.com>"]
name = "velo-backend"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.8"
r2d2 = "0.7.2"
r2d2-diesel = "0.13.0"
r2d2_postgres = "0.12.0"
regex = "0.2.2"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.3.1"

[dependencies.postgres]
version = "0.14.1"
features = ["with-chrono"]
