[package]
authors = ["Antti Keränen <detegr@gmail.com>"]
name = "velo-backend"
version = "0.1.0"

[dependencies]
derive-error-chain = "0.10.1"
error-chain = "0.10.0"
lazy_static = "0.2.8"
r2d2 = "0.7"
r2d2-diesel = "0.16.0"
r2d2_postgres = "0.13.0"
regex = "0.2.2"
rocket = "0.3"
rocket_codegen = "0.3.2"
rocket_contrib = "0.3.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.postgres]
features = ["with-chrono"]
version = "0.15"
